<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CoolingSystemInputs" Id="{0bb2d494-187a-443e-b7e4-c37368189fc9}">
    <Declaration><![CDATA[TYPE ST_CoolingSystemInputs :
STRUCT
	BattLoopValveFB					:	BOOL;
	InvLoopValveFB					:	BOOL;
	FancoilLoopValveFB				:	BOOL;
	
	CoolingLoopPressureSensor 		:	INT;
	CoolingLoopTemperatureSensor 	:	INT;
	
	CoolingSystem400VFuseFB			:	BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>