<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CoolingSystemOutputs" Id="{f1d7069a-595f-4167-8bee-5f4f2ac41b18}">
    <Declaration><![CDATA[TYPE ST_CoolingSystemOutputs :
STRUCT
	DCFanEnable						:	BOOL;
	
	BattLoopValveClose				:	BOOL;
	InvLoopValveClose				:	BOOL;
	FancoilLoopValveClose			:	BOOL;
		
	DCPumpEnable					: 	BOOL;
	ACPumpEnable					: 	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>